# ysda-lab-05

./: .gitignore  pyproject.toml
src/arclf/: data.py  engine.py  model.py  taxonomy.json  taxonomy.py  train.py
src/www/: app.py
