[tool.poetry]
name = "arclf"
version = "0.1.0"
description = ""
authors = ["Sergey Pilipenko"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
