[tool.poetry]
name = "arclf"
version = "0.1.0"
description = ""
authors = ["Sergey Pilipenko"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"
hydra-core = "^1.3.2"
watchdog = "^3.0.0"
torch = "^2.0.0"
transformers = "^4.28.1"
fire = "^0.5.0"
gdown = "^4.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = {extras = ["jupyter"], version = "^23.3.0"}
isort = "^5.12.0"
mypy = "^1.2.0"
kaggle = "^1.5.13"


[tool.poetry.group.extra.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
